--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,8 @@ jobs:
           tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: |
+            APP_URL=${{ secrets.PROD_APP_URL }}
 
       # ===============================================================
       #  PART 2: DEPLOY TO VM (This is the simplified, correct part)
