--- a/docker-compose/nginx/default.conf
+++ b/docker-compose/nginx/default.conf
@@ -50,3 +50,22 @@ server {
         deny all;
     }
 }
+
+# --- THE PHPMYADMIN SERVER BLOCK ---
+server {
+    listen 80;
+
+    server_name db.motora.thilinathushan.dev; 
+
+    access_log /var/log/nginx/phpmyadmin.access.log;
+    error_log  /var/log/nginx/phpmyadmin.error.log;
+
+    location / {
+        proxy_pass http://motora-phpmyadmin; 
+        
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
