--- a/docker-compose/nginx/default.conf
+++ b/docker-compose/nginx/default.conf
@@ -1,7 +1,12 @@
 server {
     listen 80;
     listen [::]:80;
+    listen 443 ssl;
+
     server_name motora.thilinathushan.dev;
+
+    ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
+    ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key; 
 
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
@@ -54,8 +59,12 @@ server {
 # --- THE PHPMYADMIN SERVER BLOCK ---
 server {
     listen 80;
+    listen 443 ssl;
 
-    server_name db.motora.thilinathushan.dev; 
+    server_name db.motora.thilinathushan.dev;
+
+    ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
+    ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key; 
 
     access_log /var/log/nginx/phpmyadmin.access.log;
     error_log  /var/log/nginx/phpmyadmin.error.log;
