--- a/docker-compose/nginx/default.conf
+++ b/docker-compose/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-    listen 443 ssl;
+    listen 443 ssl http2
 
     server_name motora.thilinathushan.dev;
 
@@ -59,7 +59,7 @@ server {
 # --- THE PHPMYADMIN SERVER BLOCK ---
 server {
     listen 80;
-    listen 443 ssl;
+    listen 443 ssl http2;
 
     server_name db.motora.thilinathushan.dev;
 
