--- a/compose.yaml
+++ b/compose.yaml
@@ -38,8 +38,8 @@ services:
       context: ./docker-compose/nginx
     container_name: motora-nginx
     restart: unless-stopped
-    ports:
-      - "80:80"
+    # ports:
+    #   - "80:80"
     volumes:
       - app-code:/var/www
       - ./docker-compose/nginx/default.conf:/etc/nginx/conf.d/default.conf
