--- a/docker-compose/nginx/default.conf
+++ b/docker-compose/nginx/default.conf
@@ -1,12 +1,8 @@
 server {
     listen 80;
     listen [::]:80;
-    listen 443 ssl http2;
 
     server_name motora.thilinathushan.dev;
-
-    ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
-    ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
 
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
@@ -53,5 +49,22 @@ server {
 
     location ~ /\.(?!well-known).* {
         deny all;
+    }
+}
+
+server {
+    listen 80;
+    server_name db.motora.thilinathushan.dev;
+
+    access_log /var/log/nginx/phpmyadmin.access.log;
+    error_log  /var/log/nginx/phpmyadmin.error.log;
+
+    location / {
+        proxy_pass http://motora-phpmyadmin;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
