--- a/docker-compose/nginx/default.conf
+++ b/docker-compose/nginx/default.conf
@@ -54,7 +54,7 @@ server {
 
 server {
     listen 80;
-    server_name db.motora.thilinathushan.dev;
+    server_name motora-db.thilinathushan.dev;
 
     access_log /var/log/nginx/phpmyadmin.access.log;
     error_log  /var/log/nginx/phpmyadmin.error.log;
