--- a/compose.yaml
+++ b/compose.yaml
@@ -56,6 +56,7 @@ services:
     environment:
       PMA_HOST: motora-db
       PMA_PORT: 3306
+      PMA_ABSOLUTE_URI: https://motora-db.thilinathushan.dev
     networks:
       - motora
     depends_on:
