Set execution time limits for request handling and Nginx timeouts

--- a/docker-compose/nginx/default.conf
+++ b/docker-compose/nginx/default.conf
@@ -36,6 +36,10 @@ server {
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
 
+        fastcgi_read_timeout 95s;
+        fastcgi_connect_timeout 95s;
+        fastcgi_send_timeout 95s;
+
         fastcgi_hide_header X-Powered-By;
 
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
