Add Supervisor configuration and worker service to Docker setup for queue processing

--- a/compose.yaml
+++ b/compose.yaml
@@ -70,6 +70,22 @@ services:
     networks:
       - motora
 
+  worker:
+    image: ${DOCKER_USERNAME}/motora:latest
+    container_name: motora-worker
+    restart: unless-stopped
+    # The container's main command is now to start the supervisord daemon.
+    # The -n flag tells it to run in the foreground, which is required for Docker.
+    command: /usr/bin/supervisord -n -c /etc/supervisor/conf.d/supervisord.conf
+    env_file: .env
+    volumes:
+      - app-code:/var/www
+    networks:
+      - motora
+    depends_on:
+      - app
+      - db
+
 networks:
   motora:
     driver: bridge
