--- a/docker-configs/supervisord.conf
+++ b/docker-configs/supervisord.conf
@@ -1,3 +1,10 @@
+[supervisord]
+nodaemon=true
+user=root
+logfile=/var/log/supervisor/supervisord.log
+pidfile=/var/run/supervisord.pid
+loglevel=info
+
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
 command=php /var/www/artisan queue:work --sleep=3 --tries=3 --timeout=180
