--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
           tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
           build-args: |
             APP_URL=${{ secrets.PROD_APP_URL }}
+            CACHE_BUSTER=${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           no-cache: true
